# src/main/java/com/group13/demo/controller/AdminController.java
@@ -1,0 +1,49 @@
+package com.group13.demo.controller;
+import com.group13.demo.model.Admin;
+import com.group13.demo.repository.AdminRepository;
+import com.group13.demo.responce.ResourceNotFoundException;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.web.bind.annotation.*;
+
+import java.util.List;
+
+@RestController
+@RequestMapping("/admins")
+public class AdminController {
+    @Autowired
+    private AdminRepository adminRepository;
+
+    @GetMapping
+    public List<Admin> getAllAdmins() {
+        return adminRepository.findAll();
+    }
+
+    @GetMapping("/{id}")
+    public Admin getAdminById(@PathVariable int id) {
+        return adminRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Admin not found with id " + id));
+    }
+
+    @PostMapping
+    public Admin createAdmin(@RequestBody Admin admin) {
+        return adminRepository.save(admin);
+    }
+
+    @PutMapping("/{id}")
+    public Admin updateAdmin(@PathVariable int id, @RequestBody Admin adminDetails) {
+        Admin admin = adminRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Admin not found with id " + id));
+
+        admin.setUsername(adminDetails.getUsername());
+        admin.setPassword(adminDetails.getPassword());
+        admin.setFullName(adminDetails.getFullName());
+        admin.setEmail(adminDetails.getEmail());
+
+        return adminRepository.save(admin);
+    }
+
+    @DeleteMapping("/{id}")
+    public void deleteAdmin(@PathVariable int id) {
+        adminRepository.deleteById(id);
+    }
+}
