# src/main/java/com/group13/demo/controller/CartController.java
@@ -1,0 +1,46 @@
+package com.group13.demo.controller;
+import com.group13.demo.model.Cart;
+import com.group13.demo.repository.CartRepository;
+import com.group13.demo.responce.ResourceNotFoundException;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.web.bind.annotation.*;
+
+import java.util.List;
+
+@RestController
+@RequestMapping("/carts")
+public class CartController {
+    @Autowired
+    private CartRepository cartRepository;
+
+    @GetMapping
+    public List<Cart> getAllCarts() {
+        return cartRepository.findAll();
+    }
+
+    @GetMapping("/{id}")
+    public Cart getCartById(@PathVariable int id) {
+        return cartRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Cart not found with id " + id));
+    }
+
+    @PostMapping
+    public Cart createCart(@RequestBody Cart cart) {
+        return cartRepository.save(cart);
+    }
+
+    @PutMapping("/{id}")
+    public Cart updateCart(@PathVariable int id, @RequestBody Cart cartDetails) {
+        Cart cart = cartRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Cart not found with id " + id));
+
+        // Update cart details here
+
+        return cartRepository.save(cart);
+    }
+
+    @DeleteMapping("/{id}")
+    public void deleteCart(@PathVariable int id) {
+        cartRepository.deleteById(id);
+    }
+}
