# src/main/java/com/group13/demo/controller/OrderController.java
@@ -1,0 +1,46 @@
+package com.group13.demo.controller;
+import com.group13.demo.model.Order;
+import com.group13.demo.repository.OrderRepository;
+import com.group13.demo.responce.ResourceNotFoundException;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.web.bind.annotation.*;
+
+import java.util.List;
+
+@RestController
+@RequestMapping("/orders")
+public class OrderController {
+    @Autowired
+    private OrderRepository orderRepository;
+
+    @GetMapping
+    public List<Order> getAllOrders() {
+        return orderRepository.findAll();
+    }
+
+    @GetMapping("/{id}")
+    public Order getOrderById(@PathVariable int id) {
+        return orderRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Order not found with id " + id));
+    }
+
+    @PostMapping
+    public Order createOrder(@RequestBody Order order) {
+        return orderRepository.save(order);
+    }
+
+    @PutMapping("/{id}")
+    public Order updateOrder(@PathVariable int id, @RequestBody Order orderDetails) {
+        Order order = orderRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Order not found with id " + id));
+
+        // Update order details here
+
+        return orderRepository.save(order);
+    }
+
+    @DeleteMapping("/{id}")
+    public void deleteOrder(@PathVariable int id) {
+        orderRepository.deleteById(id);
+    }
+}
