# src/main/java/com/group13/demo/model/Cart.java
@@ -1,0 +1,22 @@
+package com.group13.demo.model;
+import lombok.Data;
+import jakarta.persistence.*;
+import java.util.List;
+
+@Data
+@Entity
+@Table(name = "carts")
+public class Cart {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private int cartId;
+
+    @Column(nullable = false)
+    private int userId;
+
+    @OneToMany(mappedBy = "cart", cascade = CascadeType.ALL)
+    private List<Product> products;
+
+    @Column(nullable = false)
+    private double total;
+}
