# src/main/java/com/group13/demo/model/Order.java
@@ -1,0 +1,26 @@
+package com.group13.demo.model;
+import lombok.Data;
+import jakarta.persistence.*;
+import java.util.Date;
+import java.util.List;
+
+@Data
+@Entity
+@Table(name = "orders")
+public class Order {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private int orderId;
+
+    @Column(nullable = false)
+    private int userId;
+
+    @OneToMany(mappedBy = "order", cascade = CascadeType.ALL)
+    private List<Product> products;
+
+    @Column(nullable = false)
+    private double total;
+
+    @Column(nullable = false)
+    private Date date;
+}
